--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@ Edited by IZOBRETATEL777
                 <div class="intro-left tm-bg-dark">
                   <h2 class="mb-4">Code more, emit less</h2>
                   <p class="mb-4">
-                  Have you ever now about contribution to theGlobal Climate Change produced by your computer? 
+                  Have you ever thought about the contribution of your code to the Global Climate Change?
+
                   But what about big corporations with their milliones of servers, computers, IoT-devices?
                   </p>
                   <p class="mb-1">
