--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/slick.css" type="text/css" /> 
     <link rel="stylesheet" href="css/templatemo-style.css">
+    <link rel="stylesheet" href="css/editor.css">
+    <!-- add ace editor CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
 <!--
     
 TemplateMo 560 Astro Motion
@@ -87,7 +90,33 @@ Edited by IZOBRETATEL777
                   View Code Gallery
                 </a>
               </div>            
-            </div>            
+            </div>
+            <div class="page-width-2 page-right">
+              <div class="tm-bg-dark tm-block tm-block-taller tm-block-scroll">
+                <div class="tm-editable-container">
+                  <div id="editor" class="tm-editable-area">
+#include <iostream>
+using namespace std;
+  int main() {
+  cout << "Hello, World!";
+  return 0;
+}
+                  </div>
+                  <script src="/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+                  <script>
+                    var editor = ace.edit("editor");
+                    editor.setTheme("ace/theme/monokai");
+                    editor.session.setMode("ace/mode/c_cpp");
+                  </script>
+                  <style>
+                    .ace_editor {
+                      border: 1px solid lightgray;
+                      height: 300px;
+                      width: 100%;
+                    }
+                </div>
+              </div>
+            </div>
           </li>
           <li data-page-no="2">
             <!-- Image Carousel -->
