--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ Edited by IZOBRETATEL777
               </div>
             </div>
           </li>
+
           <li data-page-no="2">
             <!-- Image Carousel -->
             <div class="mx-auto position-relative gallery-container">
@@ -259,6 +260,17 @@ Edited by IZOBRETATEL777
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
   </div>  
+
+
+  <div class="toast top-80 start-10 position-absolute" role="alert" data-bs-delay="15000" aria-live="assertive" aria-atomic="true" id="toast">
+    <div class="toast-header">
+      <strong class="me-auto">Bootstrap</strong>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body" style="color: black; font-size:larger">
+    </div>
+  </div>
+
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/slick.js"></script>
