--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@ Edited by IZOBRETATEL777
 
   <div class="toast top-80 start-10 position-absolute" role="alert" data-bs-delay="15000" aria-live="assertive" aria-atomic="true" id="toast">
     <div class="toast-header">
-      <strong class="me-auto">Bootstrap</strong>
+      <strong class="me-auto" style="font-size:large">Optimization report</strong>
       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
-    <div class="toast-body" style="color: black; font-size:larger">
+    <div class="toast-body" style="color: black; font-size:xx-large;">
     </div>
   </div>
 
