--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ Edited by IZOBRETATEL777
           Copyright 2022 EmitLess project. All rights reserved.
         </div>
         <div class="col-md-6 px-0 tm-footer-right">
-          Huawei® Seeds for the future® project
+          Huawei® Tech4Good® project
         </div>
       </footer>
     </div>
