--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/slick.css" type="text/css" /> 
     <link rel="stylesheet" href="css/templatemo-style.css">
+    <link rel="stylesheet" href="css/editor.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
 <!--
     
 TemplateMo 560 Astro Motion
@@ -87,8 +89,37 @@ Edited by IZOBRETATEL777
                   View Code Gallery
                 </a>
               </div>            
-            </div>            
+            </div>
+            <div class="page-width-1 page-right tm-border-top tm-border-bottom">
+            <h1 class="text-center">Analyze and improve your code</h1>
+            <br>
+              <div class="tm-bg-dark tm-block tm-block-taller tm-block-scroll">
+                <div class="tm-editable-container">
+                  <div id="editor" class="tm-editable-area">//Enter your code here</div>
+                  <select id="language" class="form-select">
+                    <option value="c_cpp">C/C++</option>
+                    <option value="java">Java</option>
+                    <option value="python">Python</option>
+                  </select>
+
+                  <script>
+                    var editor = ace.edit("editor");
+                    editor.setTheme("ace/theme/mono_industrial");
+                    // disable number of lines
+                    // editor.renderer.setShowGutter(false);
+                    editor.session.setMode("ace/mode/" + document.getElementById('language').options[document.getElementById('language').selectedIndex].value);
+                    document.getElementById('language').addEventListener('change', function() {
+                      editor.session.setMode("ace/mode/" + document.getElementById('language').options[document.getElementById('language').selectedIndex].value);
+                    });
+                  </script>
+                </div>
+              </div>
+              <div class="text-center">
+                <button type="button" class="btn btn-primary tm-intro-btn" onclick="analyzeCode()">Analyze</button>
+              </div>
+            </div>
           </li>
+
           <li data-page-no="2">
             <!-- Image Carousel -->
             <div class="mx-auto position-relative gallery-container">
@@ -218,7 +249,7 @@ Edited by IZOBRETATEL777
           Copyright 2022 EmitLess project. All rights reserved.
         </div>
         <div class="col-md-6 px-0 tm-footer-right">
-          Huawei® Seeds for the future® project
+          Huawei® Tech4Good® project
         </div>
       </footer>
     </div>
@@ -229,9 +260,22 @@ Edited by IZOBRETATEL777
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
   </div>  
+
+
+  <div class="toast top-80 start-10 position-absolute" role="alert" data-bs-delay="15000" aria-live="assertive" aria-atomic="true" id="toast">
+    <div class="toast-header">
+      <strong class="me-auto" style="font-size:large">Optimization report</strong>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body" style="color: black; font-size:xx-large;">
+    </div>
+  </div>
+
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/slick.js"></script>
   <script src="js/templatemo-script.js"></script>
+  <script src="/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js/analyze_code.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
