--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EmitLess — code more, emit less</title>
+    <title>EmitLess — code better, emit less</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/slick.css" type="text/css" /> 
@@ -66,7 +66,7 @@ Edited by IZOBRETATEL777
             <div class="page-width-1 page-left">
               <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container">
                 <div class="intro-left tm-bg-dark">
-                  <h2 class="mb-4">Code more, emit less</h2>
+                  <h2 class="mb-4">Code better, emit less</h2>
                   <p class="mb-4">
                   Have you ever thought about the contribution of your code to the Global Climate Change?
 
